[package]
name = "v_hist"
version = "0.1.1"
authors = ["John Naylor <jonaylor89@gmail.com>"]
description = "A really quick way to make histograms that fix the terminal"
repository = "https://github.com/jonaylor89/hist"
license = "MIT"
readme = "README.md"
exclude = [
  "assets/*"
]

[dependencies]
termion = "1.5.1"
rand = "0.6.5"
